today last update

--- a/port-01/biography.html
+++ b/port-01/biography.html
@@ -21,7 +21,7 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="biography.html">Biography</a>
-            <a href="#">Works</a>
+            <a href="works.html">Works</a>
             <a href="#">Contact</a>
         </div>
         <main>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="bio-intro">
                     <article>
-                        <p>I am a <strong>UI/UX Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
+                        <p>I am a <strong>Web/UI Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus harum repellat autem, id ut nam at consectetur aspernatur error consequuntur exercitationem quaerat voluptatem ab nobis.</p>
                     </article>
                     <article>
