--- a/port-01/index.html
+++ b/port-01/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="bio-intro">
                     <article>
-                        <p>I am a <strong>UI/UX Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
+                        <p>I am a <strong>Web/UI Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
                         <p>On March.2019, The Headmaster's Prize was awarded for the graduation project on the philosophy of design named "The Lifetime of Homosapiens". . .</p>
                         <a class="in-active" href="biography.html">Read more</a>
                     </article>
