nov.13 morning update

--- a/port-01/index.html
+++ b/port-01/index.html
@@ -22,7 +22,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="biography.html">Biography</a>
             <a href="works.html">Works</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
         <div class="hero-image">
             <div class="container">
@@ -37,12 +37,13 @@
                 </div>
                 <div class="bio-intro">
                     <article>
-                        <p>I am a <strong>Web/UI Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
+                        <p>D. Tang is a <strong>Web/UI Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
                         <p>On March.2019, The Headmaster's Prize was awarded for the graduation project on the philosophy of design named "The Lifetime of Homosapiens". . .</p>
-                        <a class="in-active" href="biography.html">Read more</a>
+                        <a class="in-active" href="biography.html">Find out more &#62;&gt;</a>
                     </article>
                 </div>
             </section>
+            <hr>
             <h3>Works</h3>
             <section id="works">
                 <article class="article-grid">
@@ -60,7 +61,7 @@
                         <img src="./img/trade-winds.jpg" alt="Trade winds">
                     </div>
                     <div class="descript">
-                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo Design Competition</h4>
+                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p>
                         <a class="in-active" href="#" target="_blank">Read more</a>
                     </div>
@@ -68,7 +69,7 @@
             </section>
         </main>
         
-        <footer><p>Design and development by Duc Tang, Copyright &copy; 2019</p></footer>
+        <footer><p>Design and development by Duc Tang, 2019</p></footer>
     </div>
 
     <script src="./js/script.js"></script>
