--- a/port-01/biography.html
+++ b/port-01/biography.html
@@ -22,7 +22,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="biography.html">Biography</a>
             <a href="works.html">Works</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
         <main>
             <h3>Biography</h3>
@@ -40,7 +40,7 @@
                         <ul>
                             <li>
                                 Headmaster's Prize for Graduation Project<br>
-                                &#8211; The philosophy of design: "<strong>The Lifetime of Homosapiens</strong>". <i><small><a href="#">[More...]</a></small></i>
+                                &#8211; The philosophy of design: "<strong>The Lifetime of Homosapiens</strong>". <i><small><a href="#">[More information...]</a></small></i>
                             </li>
                         </ul>
                     </article>
@@ -63,7 +63,7 @@
             </section>
         </main>
         
-        <footer><p>Design and development by Duc Tang, Copyright &copy; 2019</p></footer>
+        <footer><p>Design and development by Duc Tang, 2019</p></footer>
     </div>
 
     <script src="./js/script.js"></script>
