--- a/port-01/contact.html
+++ b/port-01/contact.html
@@ -26,10 +26,23 @@
         </div>
         <main>
             <h3>Contact</h3>
+            <h4>Get In Touch</h4>
             <section id="contact">
                 <div class="contact-guide">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque cupiditate culpa doloremque. Esse sit incidunt repellat et quaerat asperiores voluptate eaque minus aspernatur provident perferendis ab soluta in reiciendis, laboriosam, doloribus odio delectus tempore dicta optio, qui voluptatum fuga. Reprehenderit placeat at, consectetur cum non autem expedita consequatur quibusdam ea?</p>
+                    <p>In case there is any request, please contact us directly via the form on the right side, or social networks.</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus harum repellat autem, id ut nam at consectetur aspernatur error consequuntur exercitationem quaerat voluptatem ab nobis.</p>
+                    <h4>Social networks</h4>
+                    <div class="networks">
+                        <div class="linkedin">
+                            <a href="https://www.linkedin.com/in/duc-t-711942174" target="_blank"><i class="fab fa-linkedin" style="color: #0e76a8;"></i><strong>LinkedIn</strong></a>
+                        </div>
+                        <div class="instagram">
+                            <a href="https://www.instagram.com/penkoa/" target="_blank"><i class="fab fa-instagram" style="color: #E4405F"></i><strong>Instagram</strong></a>
+                        </div>
+                        <div class="profilecard">
+                            <a href="https://1drv.ms/f/s!AvWk2f_XCeWtkzQW0BFNaAP4AUvR" target="_blank"><i class="far fa-id-card" style="color: #0e63a8;"></i><strong>Profile Card</strong></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="contact-form">
                     <form action="" method="post">
