--- a/port-01/works.html
+++ b/port-01/works.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="descript">
                         <h4>MARIA BARBARA Central Library | Landing Page Concept</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p><br>
                         <a class="in-active" href="./works/maria-barbara-central-central-library-landing-page.html">Read more</a>
                     </div>
                 </article>
@@ -43,7 +43,17 @@
                     </div>
                     <div class="descript">
                         <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo Design Competition</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p><br>
+                        <a class="in-active" href="#" target="_blank">Read more</a>
+                    </div>
+                </article>
+                <article class="article-grid">
+                    <div class="works-img">
+                        <img src="./img/trade-winds.jpg" alt="Trade winds">
+                    </div>
+                    <div class="descript">
+                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo Design Competition</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p><br>
                         <a class="in-active" href="#" target="_blank">Read more</a>
                     </div>
                 </article>
