--- a/port-01/works.html
+++ b/port-01/works.html
@@ -60,7 +60,7 @@
             </section>
         </main>
         
-        <footer><p>Design and development by Duc Tang, Copyright &copy; 2019</p></footer>
+        <footer><p>Design and development by Duc Tang, 2019</p></footer>
     </div>
 
     <script src="./js/script.js"></script>
