--- a/port-01/works.html
+++ b/port-01/works.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio-01</title>
+    <title>Works | D. Tang Portfolio</title>
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/44b259f5e4.js" crossorigin="anonymous"></script>
 </head>
@@ -34,7 +34,7 @@
                     <div class="descript">
                         <h4>MARIA BARBARA Central Library | Landing Page Concept</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p><br>
-                        <a class="in-active" href="./works/maria-barbara-central-central-library-landing-page.html">Read more</a>
+                        <a class="in-active" href="./works/maria-barbara-central-central-library-landing-page.html" target="_blank">Read more</a>
                     </div>
                 </article>
                 <article class="article-grid">
@@ -42,9 +42,9 @@
                         <img src="./img/trade-winds.jpg" alt="Trade winds">
                     </div>
                     <div class="descript">
-                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo Design Competition</h4>
+                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p><br>
-                        <a class="in-active" href="#" target="_blank">Read more</a>
+                        <a class="in-active" href="./works/entrance-inc-oversea-sales-enterprise-logo.html" target="_blank">Read more</a>
                     </div>
                 </article>
                 <article class="article-grid">
@@ -52,7 +52,7 @@
                         <img src="./img/trade-winds.jpg" alt="Trade winds">
                     </div>
                     <div class="descript">
-                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo Design Competition</h4>
+                        <h4>ENTRANCE Inc Oversea Sales Enterprise | Logo</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at hic eaque doloremque. Laboriosam officia laborum illo, est ab nisi?</p><br>
                         <a class="in-active" href="#" target="_blank">Read more</a>
                     </div>
