--- a/port-01/biography.html
+++ b/port-01/biography.html
@@ -32,15 +32,16 @@
                 </div>
                 <div class="bio-intro">
                     <article>
-                        <p>I am a <strong>Web/UI Designer</strong> based in Yokohama, Japan. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolor saepe, laborum alias molestias dolore accusamus debitis expedita, illum veritatis commodi, exercitationem ut. Sequi, reiciendis alias qui odio ratione assumenda.</p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus harum repellat autem, id ut nam at consectetur aspernatur error consequuntur exercitationem quaerat voluptatem ab nobis.</p>
+                        <p>Hi! I am Tang, a digital design graduate from Multidisciplinary Design Department in Yokohama. I specialize in <strong>UI design</strong> and <strong>Design research</strong>. Currently, I'm attending a UI/UX Design course (expected to complete in December.2019) at Minnesota University (US) to achieve a higher understanding in user side.</p>
+                        <p>Based on education and projects' experience, I describe myself as a person who has a passion and required knowledge in Design research. Therefore, on March-2019, I was awarded the Headmaster's Award with a project in the philosophy of design, named "The Lifetime of Homo Sapiens" in the graduation exhibition.</p>
+                        <p>I am proficient in 3 languages (English, Japanese, Vietnamese), so there's no enormous adversity in communication. I also have more than 2 years' experience in merchandise inspection, assisting inventory management and staff supervision as a part-time job. Thanks to this opportunity, I have developed some valuable skills, including <strong>Attention to detail</strong> and <strong>Following strict standards</strong>.</p>
                     </article>
                     <article>
                         <h4>Achievements & Awards</h4>
                         <ul>
                             <li>
                                 Headmaster's Prize for Graduation Project<br>
-                                &#8211; The philosophy of design: "<strong>The Lifetime of Homosapiens</strong>". <i><small><a href="#">[More information...]</a></small></i>
+                                &#8211; The philosophy of design: "<strong>The Lifetime of Homosapiens</strong>". <sup><a href="#">[More information...]</a></sup>
                             </li>
                         </ul>
                     </article>
