--- a/port-01/contact.html
+++ b/port-01/contact.html
@@ -60,7 +60,7 @@
                         <input type="email" id="mail" name="user_mail">
                         <label for="msg">Message</label><br>
                         <textarea id="msg" name="user_message" rows="10"></textarea>
-                        <button class="active-btn" type="submit">Send you message</button>
+                        <button class="active-btn" type="submit">Send your message</button>
                     </form>
                 </div>
             </section>
