--- a/port-01/index.html
+++ b/port-01/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="hero-image">
             <div class="container">
-                <h2>I've sacraficed my entire youth to become an apprentice of <strong>Design</strong>.<br>It has helped me to keep an open mind and an open heart,<br>to conquer tremendous adversity and find my own destiny.</h2>
+                <h2>LIVING WITH A DESIGN MIND</h2>
             </div>
         </div>
         <main>
