--- a/port-01/works.html
+++ b/port-01/works.html
@@ -18,6 +18,11 @@
                 <a href="index.html">Duc Tang</a>
             </div>
         </header>
+        <div class="inner-hero">
+            <div class="container">
+                <h3>Works</h3>
+            </div>
+        </div>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="biography.html">Biography</a>
