--- a/port-01/contact.html
+++ b/port-01/contact.html
@@ -18,6 +18,9 @@
                 <a href="index.html">Duc Tang</a>
             </div>
         </header>
+        <div class="inner-hero contact-hero">
+            <h2>Contact</h2>
+        </div>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="biography.html">Biography</a>
@@ -25,7 +28,6 @@
             <a href="contact.html">Contact</a>
         </div>
         <main>
-            <h3>Contact</h3>
             <h4>Get In Touch</h4>
             <section id="contact">
                 <div class="contact-guide">
