--- a/port-01/works.html
+++ b/port-01/works.html
@@ -18,10 +18,8 @@
                 <a href="index.html">Duc Tang</a>
             </div>
         </header>
-        <div class="inner-hero">
-            <div class="container">
-                <h3>Works</h3>
-            </div>
+        <div class="inner-hero works-hero">
+            <h2>Works</h2>
         </div>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -30,7 +28,6 @@
             <a href="contact.html">Contact</a>
         </div>
         <main>
-            <h3>Works</h3>
             <section id="works">
                 <article class="article-grid">
                     <div class="works-img">
