--- a/port-01/biography.html
+++ b/port-01/biography.html
@@ -18,6 +18,11 @@
                 <a href="index.html">Duc Tang</a>
             </div>
         </header>
+        <div class="inner-hero bio-hero">
+            <div class="container">
+                <h2>Biography</h2>
+            </div>
+        </div>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="biography.html">Biography</a>
@@ -25,7 +30,6 @@
             <a href="contact.html">Contact</a>
         </div>
         <main>
-            <h3>Biography</h3>
             <section id="biography">
                 <div class="bio-photo">
                     <img src="./img/one-profile-square.png" alt="">
