--- a/port-01/index.html
+++ b/port-01/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>D. Tang Portfolio</title>
+    <link rel="icon" href="./ico/one-profile-square.ico">
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/44b259f5e4.js" crossorigin="anonymous"></script>
 </head>
