--- a/port-01/biography.html
+++ b/port-01/biography.html
@@ -45,7 +45,7 @@
                         <ul>
                             <li>
                                 Headmaster's Prize for Graduation Project<br>
-                                &#8211; The philosophy of design: "<strong>The Lifetime of Homosapiens</strong>". <sup><a href="#">[More information...]</a></sup>
+                                &#8211; The philosophy of design: "<strong>The Lifetime of Homosapiens</strong>". <sup><a href="#">[More information]</a></sup>
                             </li>
                         </ul>
                     </article>
