--- a/port-01/index.html
+++ b/port-01/index.html
@@ -27,7 +27,8 @@
         </div>
         <div class="hero-image">
             <div class="container">
-                <h2>LIVING WITH A DESIGN MIND</h2>
+                <h2>Living With A Design Mind</h2>
+                <h3>"I believe that if the mission of an artist is creating visual communication, then a true designer must achieve the invisible dimension in his or her lifetime."</h3>
             </div>
         </div>
         <main>
